--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==2.0.8
 cryptography==36.0.0
 defusedxml==0.7.1
 Django==3.2.9
+django-sslserver==0.22
 djangorestframework==3.12.4
 idna==3.3
+install==1.3.4
 oauthlib==3.1.1
 psycopg2-binary==2.9.2
 pycparser==2.21
